--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
       {
         "src": "https://cdn.jsdelivr.net/npm/sweetalert2@11",
-        "dest": "/ruta/local/mensajesCustom.js"
+        "dest": "/js/mensajesCustom.js"
       }
     ]
   }
