--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+    "builds": [
+      { "src": "index.html", "use": "@vercel/static" }
+    ],
     "routes": [
       {
         "src": "https://cdn.jsdelivr.net/npm/sweetalert2@11",
@@ -7,3 +10,4 @@
     ]
   }
   
+ 
