--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "Applicacion web para el manejo de productos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "German Torres Sierra",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "json-serve": "^0.1.0",
     "json-server": "^1.0.0-beta.1"
   }
 }
