--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,14 +1,23 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "src/styles/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "src/js/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "public/images/*",
+      "use": "@vercel/static"
+    }
+   ],
     "routes": [
       {
         "src": "/(.*)",
