--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,27 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-    {
-      "src": "*.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "src/styles/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "src/js/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "public/images/*",
-      "use": "@vercel/static"
-    }
-   ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
+    "rewrites":  [
+        {"source": "/(.*)", "destination": "/"}
     ]
 }
